# noob_engine

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  package_list.txt
app/: CMakeLists.txt  app.cpp
docs/: Doxyfile.in
gitlab_ci/: build_pipeline.yml  classic_pipeline.yml  generate_includes.sh
include/: common.h
include/my_class/: GenericClass.h
scripts/: input_parsing.sh  script.sh  spinner.sh
src/: CMakeLists.txt  window.cpp
src/my_class/: my_class.cpp
tests/: CMakeLists.txt  testlib.cpp
